[package]
name = "bridge"
version = "0.1.0"
authors = ["Javier Onglao <starpogi@gmail.com>"]
edition = "2018"

[dependencies]
yaml-rust = "0.4.4"
log = "0.4.8"
prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros"]}
futures = "0.3"

[[bin]]
name = "server"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.2.0"
